<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".user_registration">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_register_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLength="30"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:background="@drawable/edittextbackground"
        android:gravity="center"
        android:hint="@string/user_name"
        android:textColor="@color/white"
        android:textColorHint="#9F9E9E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLength="40"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittextbackground"
        android:gravity="center"
        android:hint="@string/user_email"
        android:textColor="@color/white"
        android:textColorHint="#9F9E9E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:inputType="textPassword"
        android:layout_marginEnd="16dp"
        android:maxLength="20"
        android:gravity="center"
        android:hint="@string/user_password"
        android:background="@drawable/edittextbackground"
        android:textSize="20sp"
        android:textColor="@color/white"

        android:textColorHint="#9F9E9E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:background="@drawable/btnsbackground"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_register_password" />

</androidx.constraintlayout.widget.ConstraintLayout>