<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".admin_login">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/admin_login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:maxLength="35"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittextbackground"
        android:gravity="center"
        android:hint="@string/admin_email"
        android:textColor="@color/white"
        android:textColorHint="#9F9E9E"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/admin_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/admin_login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:maxLength="20"
        android:inputType="textPassword"
        android:hint="@string/admin_password"
        android:background="@drawable/edittextbackground"
        android:textSize="20sp"
        android:textColor="@color/white"

        android:textColorHint="#9F9E9E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/admin_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:background="@drawable/btnsbackground"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>